Allow custom group and kind of issuer

--- a/authgear/templates/ingress-template.yaml
+++ b/authgear/templates/ingress-template.yaml
@@ -56,7 +56,8 @@ data:
       dnsNames:
       - {{ "{{ .Host }}" }}
       issuerRef:
-        kind: Issuer
         name: {{ .Values.authgear.certManager.issuer.http01.name | quote }}
+        kind: {{ .Values.authgear.certManager.issuer.http01.kind | quote }}
+        group: {{ .Values.authgear.certManager.issuer.http01.group | quote }}
       secretName: tls-{{ "{{ .Host }}" }}
     {{ "{{ end }}" }}
