--- a/authgear/templates/portal-ingress.yaml
+++ b/authgear/templates/portal-ingress.yaml
@@ -40,8 +40,8 @@ spec:
   - {{ printf "portal.%s" .Values.authgear.baseHost | quote }}
   issuerRef:
     name: {{ .Values.authgear.certManager.issuer.http01.name | quote }}
-    kind: Issuer
-    group: cert-manager.io
+    kind: {{ .Values.authgear.certManager.issuer.http01.kind | quote }}
+    group: {{ .Values.authgear.certManager.issuer.http01.group | quote }}
 {{ end }}
 ---
 {{ $portalAuthgearSecretName := include "authgear.namePortalAuthgear" . }}
@@ -100,6 +100,6 @@ spec:
   - {{ printf "accounts.portal.%s" .Values.authgear.baseHost | quote }}
   issuerRef:
     name: {{ .Values.authgear.certManager.issuer.http01.name | quote }}
-    kind: Issuer
-    group: cert-manager.io
+    kind: {{ .Values.authgear.certManager.issuer.http01.kind | quote }}
+    group: {{ .Values.authgear.certManager.issuer.http01.group | quote }}
 {{ end }}
