--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -51,6 +51,10 @@ authgear:
     accountSID: ""
     authToken: ""
 
+  nexmo:
+    apiKey: ""
+    apiSecret: ""
+
   auditLog:
     enabled: false
     cronjob:
