--- a/authgear/templates/analytic-cronjob.yaml
+++ b/authgear/templates/analytic-cronjob.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.authgear.analytic.cronjob.enabled }}
+{{ if .Values.authgear.analytic.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
