--- a/authgear/templates/portal-ingress.yaml
+++ b/authgear/templates/portal-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.authgear.ingress.enabled }}
 {{ $portalSecretName := include "authgear.namePortal" . }}
 {{ if .Values.authgear.tls.portal.secretName }}
 {{ $portalSecretName = .Values.authgear.tls.portal.secretName }}
@@ -103,3 +104,4 @@ spec:
     kind: {{ .Values.authgear.certManager.issuer.http01.kind | quote }}
     group: {{ .Values.authgear.certManager.issuer.http01.group | quote }}
 {{ end }}
+{{- end }}
