Configure audit db env in the portal when analytics page is enabled

--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -219,6 +219,10 @@ spec:
         {{- if .Values.authgear.analytic.enabled }}
         - name: ANALYTIC_ENABLED
           value: "true"
+        - name: AUDIT_DATABASE_URL
+          value: {{ .Values.authgear.auditLog.databaseURL | quote }}
+        - name: AUDIT_DATABASE_SCHEMA
+          value: {{ .Values.authgear.auditLog.databaseSchema | quote }}
         {{- end }}
         {{- if .Values.authgear.analytic.epoch }}
         - name: ANALYTIC_EPOCH
