--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -75,6 +75,8 @@ spec:
           value: {{ .Values.authgear.databaseSchema | quote }}
         - name: TRUST_PROXY
           value: {{ .Values.authgear.trustProxy | quote }}
+        - name: CORS_ALLOWED_ORIGINS
+          value: {{ printf "portal.%s" .Values.authgear.baseHost | quote }}
         - name: LOG_LEVEL
           value: {{ .Values.authgear.logLevel | quote }}
         - name: SENTRY_DSN
