Support whatsapp.wati secret

--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -56,6 +56,11 @@ authgear:
     apiKey: ""
     apiSecret: ""
 
+  whatsappWATI:
+    enabled: false
+    whatsappPhoneNumber: ""
+    webhookAuth: ""
+
   auditLog:
     enabled: false
     cronjob:
