--- a/authgear/templates/authgear-background.yaml
+++ b/authgear/templates/authgear-background.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "authgear.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.authgear.background.replicas }}
   selector:
     matchLabels:
       {{- include "authgear.backgroundSelectorLabels" . | nindent 6 }}
