--- a/authgear/templates/authgear-images-server.yaml
+++ b/authgear/templates/authgear-images-server.yaml
@@ -17,7 +17,7 @@ metadata:
   labels:
     {{- include "authgear.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.authgear.imagesServer.replicas }}
   selector:
     matchLabels:
       {{- include "authgear.imagesSelectorLabels" . | nindent 6 }}
