--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -44,7 +44,7 @@ metadata:
   labels:
     {{- include "authgear.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.authgear.mainServer.replicas }}
   selector:
     matchLabels:
       {{- include "authgear.mainSelectorLabels" . | nindent 6 }}
