--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -116,7 +116,7 @@ metadata:
   labels:
     {{- include "authgear.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.authgear.portalServer.replicas }}
   selector:
     matchLabels:
       {{- include "authgear.portalSelectorLabels" . | nindent 6 }}
