--- a/authgear/templates/authgear-resolver-server.yaml
+++ b/authgear/templates/authgear-resolver-server.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "authgear.labels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.authgear.resolverServer.replicas }}
   selector:
     matchLabels:
       {{- include "authgear.resolverSelectorLabels" . | nindent 6 }}
