--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -91,6 +91,7 @@ authgear:
 
   mainServer:
     image: __replace_me__
+    replicas: 1
     env: {}
     resources:
       requests:
@@ -101,6 +102,7 @@ authgear:
         memory: 256Mi
 
   adminServer:
+    replicas: 1
     resources:
       requests:
         cpu: 100m
@@ -110,6 +112,7 @@ authgear:
         memory: 256Mi
 
   resolverServer:
+    replicas: 1
     resources:
       requests:
         cpu: 100m
@@ -119,6 +122,7 @@ authgear:
         memory: 256Mi
 
   background:
+    replicas: 1
     resources:
       requests:
         cpu: 100m
@@ -128,6 +132,7 @@ authgear:
         memory: 64Mi
 
   imagesServer:
+    replicas: 1
     cdn:
       host: ""
     objectStore:
@@ -159,6 +164,7 @@ authgear:
 
   portalServer:
     image: __replace_me__
+    replicas: 1
 
     email:
       sender: ""
