--- a/authgear/templates/authgear-resolver-server.yaml
+++ b/authgear/templates/authgear-resolver-server.yaml
@@ -34,6 +34,8 @@ spec:
           value: {{ .Values.authgear.databaseURL | quote }}
         - name: DATABASE_SCHEMA
           value: {{ .Values.authgear.databaseSchema | quote }}
+        - name: REDIS_URL
+          value: {{ .Values.authgear.redisURL | quote }}
         - name: TRUST_PROXY
           value: {{ .Values.authgear.trustProxy | quote }}
         - name: CORS_ALLOWED_ORIGINS
