Fix STRIPE_SECRET_KEY not exposed to upload stripe cronjob

--- a/authgear/templates/upload-stripe-cronjob.yaml
+++ b/authgear/templates/upload-stripe-cronjob.yaml
@@ -22,4 +22,6 @@ spec:
               value: {{ .Values.authgear.databaseURL | quote }}
             - name: DATABASE_SCHEMA
               value: {{ .Values.authgear.databaseSchema | quote }}
+            - name: STRIPE_SECRET_KEY
+              value: {{ .Values.authgear.stripe.secretKey | quote }}
 {{ end }}
