--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -160,6 +160,7 @@ spec:
           protocol: TCP
       - name: authgear-portal-server
         image: {{ .Values.authgear.portalServer.image | quote }}
+        imagePullPolicy: Always
         volumeMounts:
         - name: volume-ingress-template
           mountPath: /app/configmap/ingress-template
