--- a/authgear/templates/usage-record-cronjob.yaml
+++ b/authgear/templates/usage-record-cronjob.yaml
@@ -36,6 +36,7 @@ spec:
           containers:
           - name: authgear-usage-record-cronjob
             image: {{ .Values.authgear.portalServer.image | quote }}
+            imagePullPolicy: Always
             command:
             - sh
             - /bin/entrypoint.sh
