--- a/authgear/templates/authgear-background.yaml
+++ b/authgear/templates/authgear-background.yaml
@@ -14,21 +14,27 @@ spec:
       labels:
         {{- include "authgear.backgroundSelectorLabels" . | nindent 8 }}
     spec:
-      {{ if .Values.authgear.appCustomResources.path }}
       volumes:
+      {{- if .Values.authgear.appCustomResources.path }}
       - name: custom-resources
         {{- toYaml .Values.authgear.appCustomResources.volume | nindent 8 }}
-      {{ end }}
+      {{- end }}
+      {{- if .Values.authgear.extraVolumes }}
+      {{- toYaml .Values.authgear.extraVolumes | nindent 6 }}
+      {{- end }}
       containers:
       - name: authgear-background
         image: {{ .Values.authgear.mainServer.image | quote }}
         imagePullPolicy: Always
         args: ["authgear", "background"]
-        {{ if .Values.authgear.appCustomResources.path }}
         volumeMounts:
+        {{- if .Values.authgear.appCustomResources.path }}
         - name: custom-resources
           mountPath: {{ .Values.authgear.appCustomResources.path | quote }}
-        {{ end }}
+        {{- end }}
+        {{- if .Values.authgear.extraVolumeMounts }}
+        {{- toYaml .Values.authgear.extraVolumeMounts | nindent 8 }}
+        {{- end }}
         env:
         - name: DATABASE_URL
           value: {{ .Values.authgear.databaseURL | quote }}
