--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -54,21 +54,27 @@ spec:
         {{- include "authgear.mainSelectorLabels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ include "authgear.nameMain" . | quote }}
-      {{ if .Values.authgear.appCustomResources.path }}
       volumes:
+      {{- if .Values.authgear.appCustomResources.path }}
       - name: custom-resources
         {{- toYaml .Values.authgear.appCustomResources.volume | nindent 8 }}
-      {{ end }}
+      {{- end }}
+      {{- if .Values.authgear.extraVolumes }}
+      {{- toYaml .Values.authgear.extraVolumes | nindent 6 }}
+      {{- end }}
       containers:
       - name: authgear-main-server
         image: {{ .Values.authgear.mainServer.image | quote }}
         imagePullPolicy: Always
         args: ["authgear", "start", "main"]
-        {{ if .Values.authgear.appCustomResources.path }}
         volumeMounts:
+        {{- if .Values.authgear.appCustomResources.path }}
         - name: custom-resources
           mountPath: {{ .Values.authgear.appCustomResources.path | quote }}
-        {{ end }}
+        {{- end }}
+        {{- if .Values.authgear.extraVolumeMounts }}
+        {{- toYaml .Values.authgear.extraVolumeMounts | nindent 8 }}
+        {{- end }}
         env:
         - name: DATABASE_URL
           value: {{ .Values.authgear.databaseURL | quote }}
