--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -138,14 +138,17 @@ spec:
           items:
           - key: ingress.tpl.yaml
             path: ingress.tpl.yaml
-      {{ if .Values.authgear.appCustomResources.path }}
+      {{- if .Values.authgear.appCustomResources.path }}
       - name: app-custom-resources
         {{- toYaml .Values.authgear.appCustomResources.volume | nindent 8 }}
-      {{ end }}
-      {{ if .Values.authgear.portalCustomResources.path }}
+      {{- end }}
+      {{- if .Values.authgear.portalCustomResources.path }}
       - name: portal-custom-resources
         {{- toYaml .Values.authgear.portalCustomResources.volume | nindent 8 }}
-      {{ end }}
+      {{- end }}
+      {{- if .Values.authgear.extraVolumes }}
+      {{- toYaml .Values.authgear.extraVolumes | nindent 6 }}
+      {{- end }}
       containers:
       - name: authgear-portal-server-proxy
         image: {{ .Values.authgear.portalServerProxy.image | quote }}
@@ -164,14 +167,17 @@ spec:
         volumeMounts:
         - name: volume-ingress-template
           mountPath: /app/configmap/ingress-template
-        {{ if .Values.authgear.appCustomResources.path }}
+        {{- if .Values.authgear.appCustomResources.path }}
         - name: app-custom-resources
           mountPath: {{ .Values.authgear.appCustomResources.path | quote }}
-        {{ end }}
-        {{ if .Values.authgear.portalCustomResources.path }}
+        {{- end }}
+        {{- if .Values.authgear.portalCustomResources.path }}
         - name: portal-custom-resources
           mountPath: {{ .Values.authgear.portalCustomResources.path | quote }}
-        {{ end }}
+        {{- end }}
+        {{- if .Values.authgear.extraVolumeMounts }}
+        {{- toYaml .Values.authgear.extraVolumeMounts | nindent 8 }}
+        {{- end }}
         env:
         - name: DATABASE_URL
           value: {{ .Values.authgear.databaseURL | quote }}
