--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -62,6 +62,25 @@ spec:
       {{- if .Values.authgear.extraVolumes }}
       {{- toYaml .Values.authgear.extraVolumes | nindent 6 }}
       {{- end }}
+      {{- if .Values.authgear.mainServer.nodeSelector }}
+      nodeSelector:
+        {{- .Values.authgear.mainServer.nodeSelector | toYaml | nindent 8 }}
+      {{- end }}
+      {{- if .Values.authgear.mainServer.nodeName }}
+      nodeName: {{ .Values.authgear.mainServer.nodeName | quote }}
+      {{- end }}
+      {{- if .Values.authgear.mainServer.affinity }}
+      affinity:
+        {{- .Values.authgear.mainServer.affinity | toYaml | nindent 8 }}
+      {{- end }}
+      {{- if .Values.authgear.mainServer.tolerations }}
+      tolerations:
+      {{- .Values.authgear.mainServer.tolerations | toYaml | nindent 6 }}
+      {{- end }}
+      {{- if .Values.authgear.mainServer.topologySpreadConstraints }}
+      topologySpreadConstraints:
+      {{- .Values.authgear.mainServer.topologySpreadConstraints | toYaml | nindent 6 }}
+      {{- end }}
       containers:
       - name: authgear-main-server
         image: {{ .Values.authgear.mainServer.image | quote }}
