--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -106,6 +106,11 @@ authgear:
     image: __replace_me__
     replicas: 1
     env: {}
+    nodeSelector: {}
+    nodeName: ""
+    affinity: {}
+    tolerations: []
+    topologySpreadConstraints: []
     resources:
       requests:
         cpu: 100m
@@ -116,6 +121,11 @@ authgear:
 
   adminServer:
     replicas: 1
+    nodeSelector: {}
+    nodeName: ""
+    affinity: {}
+    tolerations: []
+    topologySpreadConstraints: []
     resources:
       requests:
         cpu: 100m
@@ -126,6 +136,11 @@ authgear:
 
   resolverServer:
     replicas: 1
+    nodeSelector: {}
+    nodeName: ""
+    affinity: {}
+    tolerations: []
+    topologySpreadConstraints: []
     resources:
       requests:
         cpu: 100m
@@ -136,6 +151,11 @@ authgear:
 
   background:
     replicas: 1
+    nodeSelector: {}
+    nodeName: ""
+    affinity: {}
+    tolerations: []
+    topologySpreadConstraints: []
     resources:
       requests:
         cpu: 100m
@@ -164,6 +184,11 @@ authgear:
         container: ""
         accessKey: ""
 
+    nodeSelector: {}
+    nodeName: ""
+    affinity: {}
+    tolerations: []
+    topologySpreadConstraints: []
     resources:
       requests:
         cpu: 500m
@@ -196,6 +221,11 @@ authgear:
 
     env: {}
 
+    nodeSelector: {}
+    nodeName: ""
+    affinity: {}
+    tolerations: []
+    topologySpreadConstraints: []
     resources:
       requests:
         cpu: 100m
