--- a/authgear/templates/upload-stripe-cronjob.yaml
+++ b/authgear/templates/upload-stripe-cronjob.yaml
@@ -13,6 +13,25 @@ spec:
       template:
         spec:
           restartPolicy: Never
+          {{- if .Values.authgear.portalServer.nodeSelector }}
+          nodeSelector:
+            {{- .Values.authgear.portalServer.nodeSelector | toYaml | nindent 12 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.nodeName }}
+          nodeName: {{ .Values.authgear.portalServer.nodeName | quote }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.affinity }}
+          affinity:
+            {{- .Values.authgear.portalServer.affinity | toYaml | nindent 12 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.tolerations }}
+          tolerations:
+          {{- .Values.authgear.portalServer.tolerations | toYaml | nindent 10 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.topologySpreadConstraints }}
+          topologySpreadConstraints:
+          {{- .Values.authgear.portalServer.topologySpreadConstraints | toYaml | nindent 10 }}
+          {{- end }}
           containers:
           - name: authgear-upload-stripe-cronjob
             image: {{ .Values.authgear.portalServer.image | quote }}
