--- a/authgear/templates/usage-record-cronjob.yaml
+++ b/authgear/templates/usage-record-cronjob.yaml
@@ -33,6 +33,25 @@ spec:
             configMap:
               defaultMode: 0755
               name: {{ include "authgear.nameUsageRecordCron" . | quote }}
+          {{- if .Values.authgear.portalServer.nodeSelector }}
+          nodeSelector:
+            {{- .Values.authgear.portalServer.nodeSelector | toYaml | nindent 12 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.nodeName }}
+          nodeName: {{ .Values.authgear.portalServer.nodeName | quote }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.affinity }}
+          affinity:
+            {{- .Values.authgear.portalServer.affinity | toYaml | nindent 12 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.tolerations }}
+          tolerations:
+          {{- .Values.authgear.portalServer.tolerations | toYaml | nindent 10 }}
+          {{- end }}
+          {{- if .Values.authgear.portalServer.topologySpreadConstraints }}
+          topologySpreadConstraints:
+          {{- .Values.authgear.portalServer.topologySpreadConstraints | toYaml | nindent 10 }}
+          {{- end }}
           containers:
           - name: authgear-usage-record-cronjob
             image: {{ .Values.authgear.portalServer.image | quote }}
