Support authgear-deno

--- a/authgear/templates/authgear-background.yaml
+++ b/authgear/templates/authgear-background.yaml
@@ -61,6 +61,8 @@ spec:
           value: {{ .Values.authgear.databaseSchema | quote }}
         - name: REDIS_URL
           value: {{ .Values.authgear.redisURL | quote }}
+        - name: DENO_ENDPOINT
+          value: {{ printf "http://%s" (include "authgear.nameDeno" .) | quote }}
         - name: TRUST_PROXY
           value: {{ .Values.authgear.trustProxy | quote }}
         - name: LOG_LEVEL
