--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -130,13 +130,9 @@ spec:
           containerPort: 3000
           protocol: TCP
         livenessProbe:
-          httpGet:
-            path: /healthz
-            port: http
+          {{- toYaml .Values.authgear.mainServer.livenessProbe | nindent 10 }}
         readinessProbe:
-          httpGet:
-            path: /healthz
-            port: http
+          {{- toYaml .Values.authgear.mainServer.readinessProbe | nindent 10}}
         resources:
           {{- toYaml .Values.authgear.mainServer.resources | nindent 10 }}
 ---
