--- a/authgear/templates/authgear-resolver-server.yaml
+++ b/authgear/templates/authgear-resolver-server.yaml
@@ -91,13 +91,9 @@ spec:
           containerPort: 3001
           protocol: TCP
         livenessProbe:
-          httpGet:
-            path: /healthz
-            port: http
+          {{- toYaml .Values.authgear.resolverServer.livenessProbe | nindent 10 }}
         readinessProbe:
-          httpGet:
-            path: /healthz
-            port: http
+          {{- toYaml .Values.authgear.resolverServer.readinessProbe | nindent 10 }}
         resources:
           {{- toYaml .Values.authgear.resolverServer.resources | nindent 10 }}
 ---
