Switch CronJob API version to batch/v1 to support 1.25

--- a/authgear/templates/usage-record-cronjob.yaml
+++ b/authgear/templates/usage-record-cronjob.yaml
@@ -14,7 +14,7 @@ data:
     authgear-portal usage collect-count email-sent yesterday
     authgear-portal usage collect-count whatsapp-otp-verified yesterday
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ include "authgear.nameUsageRecordCron" . | quote }}
