--- a/authgear/templates/analytic-cronjob.yaml
+++ b/authgear/templates/analytic-cronjob.yaml
@@ -29,7 +29,7 @@ data:
       --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheet.range.projectWeeklyReport | quote }}
     {{- end }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ include "authgear.nameAnalyticCronWeekly" . | quote }}
@@ -103,7 +103,7 @@ data:
       --google-spreadsheet-range={{ .Values.authgear.analytic.googleSpreadsheet.range.projectMonthlyReport | quote }}
     {{ end }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ include "authgear.nameAnalyticCronMonthly" . | quote }}
@@ -186,7 +186,7 @@ data:
 
     authgear-portal analytic collect-count yesterday
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ include "authgear.nameAnalyticCronDaily" . | quote }}
