--- a/authgear/templates/audit-log-cronjob.yaml
+++ b/authgear/templates/audit-log-cronjob.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.authgear.auditLog.cronjob.enabled }}
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ include "authgear.nameAuditLogCron" . | quote }}
