--- a/authgear/templates/upload-stripe-cronjob.yaml
+++ b/authgear/templates/upload-stripe-cronjob.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.authgear.stripe.cronjob.enabled }}
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ include "authgear.nameUploadStripeCron" . | quote }}
