Add support whatsapp on-premises API

--- a/authgear/values.yaml
+++ b/authgear/values.yaml
@@ -76,6 +76,18 @@ authgear:
     whatsappPhoneNumber: ""
     webhookAuth: ""
 
+  whatsappOnPremises:
+    enabled: false
+    apiEndpoint: ""
+    username: ""
+    password: ""
+    authenticationTemplate:
+      name: ""
+      type: authentication
+      namespace: ""
+      languages:
+      - en
+
   auditLog:
     enabled: false
     cronjob:
