--- a/authgear/templates/portal-ingress.yaml
+++ b/authgear/templates/portal-ingress.yaml
@@ -1,8 +1,4 @@
 {{- if .Values.authgear.ingress.enabled }}
-{{ $portalHost := printf "portal.%s" .Values.authgear.baseHost }}
-{{ if .Values.authgear.portalServer.host }}
-{{ $portalHost = .Values.authgear.portalServer.host }}
-{{ end }}
 {{ $portalSecretName := include "authgear.namePortal" . }}
 {{ if .Values.authgear.tls.portal.secretName }}
 {{ $portalSecretName = .Values.authgear.tls.portal.secretName }}
@@ -19,9 +15,9 @@ spec:
   tls:
   - secretName: {{ $portalSecretName | quote }}
     hosts:
-    - {{ $portalHost | quote }}
+    - {{ include "authgear.portalHost" . | quote }}
   rules:
-  - host: {{ $portalHost | quote }}
+  - host: {{ include "authgear.portalHost" . | quote }}
     http:
       paths:
       - path: /
@@ -42,7 +38,7 @@ metadata:
 spec:
   secretName: {{ $portalSecretName | quote }}
   dnsNames:
-  - {{ $portalHost | quote }}
+  - {{ include "authgear.portalHost" . | quote }}
   issuerRef:
     name: {{ .Values.authgear.certManager.issuer.http01.name | quote }}
     kind: {{ .Values.authgear.certManager.issuer.http01.kind | quote }}
