--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -213,7 +213,7 @@ spec:
         - name: STRIPE_WEBHOOK_SIGNING_KEY
           value: {{ .Values.authgear.stripe.webhookSigningKey | quote }}
         - name: CORS_ALLOWED_ORIGINS
-          value: {{ printf "portal.%s" .Values.authgear.baseHost | quote }}
+          value: {{ include "authgear.portalHost" . | quote }}
         {{- if .Values.authgear.imagesServer.cdn.host }}
         - name: IMAGES_CDN_HOST
           value: {{ .Values.authgear.imagesServer.cdn.host | quote }}
