--- a/authgear/templates/authgear-images-server.yaml
+++ b/authgear/templates/authgear-images-server.yaml
@@ -88,7 +88,10 @@ spec:
           value: {{ .Values.authgear.trustProxy | quote }}
         - name: CORS_ALLOWED_ORIGINS
           value: {{ include "authgear.portalHost" . | quote }}
-        {{- if .Values.authgear.imagesServer.cdn.host }}
+        {{- if .Values.authgear.imagesServer.cdn.hosts }}
+        - name: IMAGES_CDN_HOST
+          value: {{ join "," .Values.authgear.imagesServer.cdn.hosts | quote }}
+        {{- else }}
         - name: IMAGES_CDN_HOST
           value: {{ .Values.authgear.imagesServer.cdn.host | quote }}
         {{- end }}
